# fdopt

./: .buildinfo  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .pylintrc  LICENSE  README.md  README.rst  api.html  environment.yml  genindex.html  index.html  objects.inv  qs.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: api.doctree  environment.pickle  index.doctree  qs.doctree
.doctrees/api/: fdopt.NLPSolvable.doctree
.doctrees/tests/: hs071.HS071.doctree
.github/workflows/: sphinx_gh_pages.yaml
_modules/: hs071.html  index.html
_modules/fdopt/: _nlp_solvable.html
_sources/: api.rst.txt  index.rst.txt  qs.rst.txt
_sources/api/: fdopt.NLPSolvable.rst.txt
_sources/tests/: hs071.HS071.rst.txt
api/: fdopt.NLPSolvable.html
docs/source/: api.rst  conf.py  index.rst
src/fdopt/: __init__.py  _ipopt_solver.py  _nlp_solvable.py  _version.py
tests/: hs071.HS071.html  hs071.py
