[metadata]
name = fdopt
version = attr: fdopt._version.__version__
url = https://github.com/peske/fdopt
author = Aleksandar Pesic
author_email = peske.nis@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
license = MIT
license_files = LICENSE
description = Optimization framework
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
keywords = lp, nlp

[options]
install_requires =
    numpy
python_requires = >=3.7
packages = fdopt
package_dir =
    = src

[options.extras_require]
dev =
    pytest
    pylint
    flake8
    mypy
    pydocstyle
doc =
    sphinx
    furo
